# ggmod

./: .gitignore  Cargo.toml  README.md  log.txt
src/: cli.rs  files.rs  gamebanana.rs  lib.rs  main.rs  modz.rs  tui.rs  url.rs
src/gamebanana/: builder.rs  models.rs  modpage.rs  search.rs  util.rs
src/gamebanana/models/: category.rs  file.rs  game.rs  modpage.rs  preview.rs  search_result.rs
src/tui/: app.rs  handler.rs  runner.rs  search.rs  state.rs  termination.rs  ui.rs
src/tui/ui/: browse.rs  category.rs  gallery.rs  help.rs  manage.rs  popup.rs  search.rs  section.rs  throbber.rs  util.rs
