[package]
name = "ggmod"
version = "1.1.3"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
colog = "1.3.0"
compress-tools = { version = "0.15.1", features = ["blocking"] }
dircpy = "0.3.19"
directories = "5.0.1"
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
