[package]
name = "ggmod"
version = "1.9.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
compress-tools = { version = "0.15.1", features = ["blocking"] }
dircpy = "0.3.19"
directories = "5.0.1"
log = "0.4.22"
ordermap = "0.5.4"
ratatui = "0.29.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
simple-logging = "2.0.2"
strum = { version = "0.26.3", features = ["derive"] }
